--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app-container {
   text-align: center;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 .header {
@@ -10,28 +11,11 @@
   background-color: rgb(75, 131, 172);
   font-size: 24px;
   padding: 10px 0px 10px 0px;
-  color: white;
-}
-
-a {
-  color: rgb(158, 208, 235);
-}
-
-a:link {
-  color: rgb(158, 208, 235);
-  text-decoration: none;
-}
-
-a:hover {
-  color: #F26419;
-}
-
-a:active {
-  color: white;
+  height: 6vh;
 }
 
 .body {
-  background-color: rgb(41, 68, 85);
+  background-color: rgb(17, 64, 94);
   padding: 20px;
   color: #BFC0C0;
   display: flex;
@@ -40,31 +24,90 @@ a:active {
   align-items: center;
 }
 
-h1 {
-  font-size: 32px;
-  margin: 22px 0px 22px 0px;
-  color: #ffffff;
+.aboutme {
+  width: 70%;
+  background-color: rgba(255, 255, 255, 0.548);
+  margin-bottom: 3%;
+  color: white;
 }
 
 .welcome {
-  height: 120px;
   display: flex;
   justify-content: space-between;
+  flex-flow: row wrap;
   margin: 20px 10px 20px 10px;
+  width: 79vw;
 }
 
 .welcome-div {
-  height: 120px;
-  width: 140px;
-  background-color: silver;
+  height: 133px;
+  width: 24vw;
+  background-color: rgba(192, 192, 192, 0.562);
   color: white;
-  padding: 12px;
-  margin: 0px 10px 0px 10px;
-  font-family: 'Trocchi', serif;
+  margin: 0px 2px 8px 2px;
+  padding: 5px 9px 5px 11px;
 } 
 
+.home-icon {
+  display: none;
+}
+
+.contact-icon {
+  display: none;
+}
+
+@media only screen and (max-width: 1100px) {
+  .welcome {
+    width: 80vw;
+  }
+  
+  .welcome-div {
+    width: 23vw;
+    justify-content: center;
+    margin: 0px 2px 10px 0px;
+  }
+
+  .home-icon {
+    display: none;
+  }
+
+  .contact-icon {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 641px) {
+  .welcome {
+    width: 89vw;
+  }
+
+  .fullsize-nav {
+    display: none;
+  }
+
+  .welcome-div {
+    width: 39vw;
+    margin: 0px 0px 8px 0px;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 479px) {
+  .welcome {
+    width: 89vw;
+  }
+
+  .fullsize-nav {
+    display: none;
+  }
+
+  .welcome-div {
+    width: 80vw;
+  }
+}
+
 .space {
-  height: 70px;
+  height: 25px;
 }
 
 .footer {
@@ -73,6 +116,76 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 10px;
+  font-size: 11px;
   color: #86BBD8;
+}
+
+/* ••·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
+:root {
+	--animation-delay: 200ms;
+	--duration: 800ms;
+	--iterations: 1;
+}
+/* ••·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
+
+.reveal-text,
+.reveal-text::after {
+	animation-delay: var(--animation-delay);
+	animation-iteration-count: var(--iterations);
+	animation-duration: var(--duration);
+	animation-fill-mode: both;
+	animation-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
+}
+
+.reveal-text {
+	position: relative;
+	font-size: 10vw;
+	display: block;
+	user-select: none;
+	animation-name: reveal-text;
+	color: #FFF;
+	white-space: nowrap;
+  cursor: default;
+}
+	
+.reveal-text:after {
+	content: "";
+	position: absolute;
+	z-index: 999;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #F26419;
+	transform: scaleX(0);
+	transform-origin: 0 50%;
+	pointer-events: none;
+	animation-name: revealer-text;
+}
+
+@keyframes reveal-text {
+	from {
+		clip-path: inset(0 100% 0 0);
+	}
+	to {
+		clip-path: inset(0 0 0 0);
+	}
+}
+
+@keyframes revealer-text {
+	0%, 50% {
+		transform-origin: 0 50%;
+	}
+	
+	60%, 100% {
+		transform-origin: 100% 50%;		
+	}
+
+	60% {
+		transform: scaleX(1);
+	}
+	
+	100% {
+		transform: scaleX(0);
+	}
 }
