--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,37 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #86BBD8;
+	flex-direction: column;
+}
+
+a {
+  color: rgb(158, 208, 235);
+}
+
+a:link {
+  color: rgb(158, 208, 235);
+  text-decoration: none;
+}
+
+a:hover {
+  color: #F26419;
+}
+
+a:active {
+  color: white;
+}
+
+h1 {
+  font-size: 32px;
+  margin: 22px 0px 22px 0px;
+  color: #ffffff;
+}
+
+h2 {
+  font-size: 16px;
+  font-family: 'Julius Sans One', sans-serif;  
 }
