Responsive CSS achieved

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   font-size: 24px;
   padding: 10px 0px 10px 0px;
   height: 6vh;
+  width: 100vw;
 }
 
 .body {
@@ -22,6 +23,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.lazy {
+  visibility: hidden;
 }
 
 .aboutme {
@@ -49,11 +54,13 @@
 } 
 
 .home-icon {
-  display: none;
+  visibility: hidden;
+  font-size: 34px;
 }
 
 .contact-icon {
-  display: none;
+  visibility: hidden;
+  font-size: 38px;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -68,21 +75,32 @@
   }
 
   .home-icon {
-    display: none;
+    visibility: hidden;
   }
 
   .contact-icon {
-    display: none;
+    visibility: hidden;
   }
 }
 
 @media only screen and (max-width: 641px) {
-  .welcome {
-    width: 89vw;
-  }
 
   .fullsize-nav {
-    display: none;
+    visibility: hidden;
+  }
+  
+  .home-icon {
+    visibility: visible;
+    margin: 0px 80px 10px 0px;
+  }
+  
+  .contact-icon {
+    visibility: visible;
+    margin: 5px 72px 10px 0px;
+  }
+  
+  .welcome {
+    width: 89vw;
   }
 
   .welcome-div {
@@ -98,11 +116,35 @@
   }
 
   .fullsize-nav {
-    display: none;
+    visibility: hidden;
+  }
+
+  .home-icon {
+    visibility: visible;
+    margin: 0px 50px 0px 0px;
+  }
+
+  .contact-icon {
+    visibility: visible;
+    margin: 0px 90px 0px 0px;
   }
 
   .welcome-div {
     width: 80vw;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .home-icon {
+    position: fixed;
+    align-self: center;
+    margin: 0px 30px 0px 0px;
+  }
+
+  .contact-icon {
+    position: fixed;
+    align-self: center;
+    margin: 3px 0px 0px 30px;
   }
 }
 
