--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,9 @@ h2 {
   font-size: 16px;
   font-family: 'Julius Sans One', sans-serif;  
 }
+
+@media only screen and (max-width: 641px) {
+  a {
+    color: rgb(210, 239, 253);
+  }
+}
