--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   width: 100vw;
 }
 
+.lazy {
+  visibility: hidden;
+}
+
 .body {
   background-color: rgb(17, 64, 94);
   padding: 20px;
@@ -25,150 +29,12 @@
   align-items: center;
 }
 
-.lazy {
-  visibility: hidden;
-}
-
-.aboutme {
-  width: 70%;
-  background-color: rgba(255, 255, 255, 0.548);
-  margin-bottom: 3%;
-  color: white;
-}
-
-.welcome {
-  display: flex;
-  justify-content: space-between;
-  flex-flow: row wrap;
-  margin: 20px 10px 20px 10px;
-  width: 79vw;
-}
-
-.welcome-div {
-  height: 133px;
-  width: 24vw;
-  background-color: rgba(192, 192, 192, 0.562);
-  color: white;
-  margin: 0px 2px 8px 2px;
-  padding: 5px 9px 5px 11px;
-} 
-
-.home-icon {
-  visibility: hidden;
-  font-size: 34px;
-}
-
-.contact-icon {
-  visibility: hidden;
-  font-size: 38px;
-}
-
-@media only screen and (max-width: 1100px) {
-  .welcome {
-    width: 80vw;
-  }
-  
-  .welcome-div {
-    width: 23vw;
-    justify-content: center;
-    margin: 0px 2px 10px 0px;
-  }
-
-  .home-icon {
-    visibility: hidden;
-  }
-
-  .contact-icon {
-    visibility: hidden;
-  }
-}
-
-@media only screen and (max-width: 641px) {
-
-  .fullsize-nav {
-    visibility: hidden;
-  }
-  
-  .home-icon {
-    visibility: visible;
-    margin: 0px 80px 10px 0px;
-  }
-  
-  .contact-icon {
-    visibility: visible;
-    margin: 5px 72px 10px 0px;
-  }
-  
-  .welcome {
-    width: 89vw;
-  }
-
-  .welcome-div {
-    width: 39vw;
-    margin: 0px 0px 8px 0px;
-    justify-content: center;
-  }
-}
-
-@media only screen and (max-width: 479px) {
-  .welcome {
-    width: 89vw;
-  }
-
-  .fullsize-nav {
-    visibility: hidden;
-  }
-
-  .home-icon {
-    visibility: visible;
-    margin: 0px 50px 0px 0px;
-  }
-
-  .contact-icon {
-    visibility: visible;
-    margin: 0px 90px 0px 0px;
-  }
-
-  .welcome-div {
-    width: 80vw;
-  }
-}
-
-@media only screen and (max-width: 420px) {
-  .home-icon {
-    position: fixed;
-    align-self: center;
-    margin: 0px 30px 0px 0px;
-  }
-
-  .contact-icon {
-    position: fixed;
-    align-self: center;
-    margin: 3px 0px 0px 30px;
-  }
-}
-
-.space {
-  height: 25px;
-}
-
-.footer {
-  background-color: rgb(75, 131, 172);
-  height: 90px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 11px;
-  color: #86BBD8;
-}
-
 /* ••·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
 :root {
 	--animation-delay: 200ms;
 	--duration: 800ms;
 	--iterations: 1;
 }
-/* ••·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
 
 .reveal-text,
 .reveal-text::after {
@@ -230,4 +96,149 @@
 	100% {
 		transform: scaleX(0);
 	}
+}
+/* ••·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
+
+.aboutme {
+  width: 70%;
+  background-color: rgba(255, 255, 255, 0.548);
+  margin-bottom: 3%;
+  color: white;
+}
+
+.welcome {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  margin: 20px 10px 20px 10px;
+  width: 79vw;
+}
+
+.welcome-div {
+  height: 133px;
+  width: 24vw;
+  background-color: rgba(192, 192, 192, 0.562);
+  color: white;
+  margin: 0px 2px 8px 2px;
+  padding: 5px 9px 5px 11px;
+} 
+
+.home-icon {
+  visibility: hidden;
+  font-size: 34px;
+}
+
+.contact-icon {
+  visibility: hidden;
+  font-size: 38px;
+}
+
+@media only screen and (max-width: 1100px) {
+  .welcome {
+    width: 80vw;
+  }
+  
+  .welcome-div {
+    width: 23vw;
+    justify-content: center;
+    margin: 0px 2px 10px 0px;
+  }
+
+  .home-icon {
+    visibility: hidden;
+  }
+
+  .contact-icon {
+    visibility: hidden;
+  }
+}
+
+@media only screen and (max-width: 641px) {
+  .reveal-text {
+    font-size: 12vw;
+  }
+
+  .fullsize-nav {
+    visibility: hidden;
+  }
+  
+  .home-icon {
+    visibility: visible;
+    margin: 0px 80px 10px 0px;
+  }
+  
+  .contact-icon {
+    visibility: visible;
+    margin: 5px 72px 10px 0px;
+  }
+  
+  .welcome {
+    width: 89vw;
+  }
+
+  .welcome-div {
+    width: 39vw;
+    margin: 0px 0px 8px 0px;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 479px) {
+  .reveal-text {
+    font-size: 14vw;
+  }
+
+  .welcome {
+    width: 89vw;
+  }
+
+  .fullsize-nav {
+    visibility: hidden;
+  }
+
+  .home-icon {
+    visibility: visible;
+    margin: 0px 50px 0px 0px;
+  }
+
+  .contact-icon {
+    visibility: visible;
+    margin: 0px 90px 0px 0px;
+  }
+
+  .welcome-div {
+    width: 80vw;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .reveal-text {
+    font-size: 14vw;
+  }
+
+  .home-icon {
+    position: fixed;
+    align-self: center;
+    margin: 0px 30px 0px 0px;
+  }
+
+  .contact-icon {
+    position: fixed;
+    align-self: center;
+    margin: 3px 0px 0px 30px;
+  }
+}
+
+.space {
+  height: 25px;
+}
+
+.footer {
+  background-color: rgb(75, 131, 172);
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 11px;
+  color: #86BBD8;
 }
