--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,6 @@
   width: 100vw;
 }
 
-.header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: rgb(75, 131, 172);
-  font-size: 24px;
-  padding: 10px 0px 10px 0px;
-  height: 6vh;
-  width: 100vw;
-}
-
 .lazy {
   visibility: hidden;
 }
@@ -123,16 +112,6 @@
   padding: 5px 9px 5px 11px;
 } 
 
-.home-icon {
-  visibility: hidden;
-  font-size: 34px;
-}
-
-.contact-icon {
-  visibility: hidden;
-  font-size: 38px;
-}
-
 @media only screen and (max-width: 1100px) {
   .welcome {
     width: 80vw;
@@ -143,33 +122,11 @@
     justify-content: center;
     margin: 0px 2px 10px 0px;
   }
-
-  .home-icon {
-    visibility: hidden;
-  }
-
-  .contact-icon {
-    visibility: hidden;
-  }
 }
 
 @media only screen and (max-width: 641px) {
   .reveal-text {
     font-size: 12vw;
-  }
-
-  .fullsize-nav {
-    visibility: hidden;
-  }
-  
-  .home-icon {
-    visibility: visible;
-    margin: 0px 80px 10px 0px;
-  }
-  
-  .contact-icon {
-    visibility: visible;
-    margin: 5px 72px 10px 0px;
   }
   
   .welcome {
@@ -192,40 +149,8 @@
     width: 89vw;
   }
 
-  .fullsize-nav {
-    visibility: hidden;
-  }
-
-  .home-icon {
-    visibility: visible;
-    margin: 0px 50px 0px 0px;
-  }
-
-  .contact-icon {
-    visibility: visible;
-    margin: 0px 90px 0px 0px;
-  }
-
   .welcome-div {
     width: 80vw;
-  }
-}
-
-@media only screen and (max-width: 420px) {
-  .reveal-text {
-    font-size: 14vw;
-  }
-
-  .home-icon {
-    position: fixed;
-    align-self: center;
-    margin: 0px 30px 0px 0px;
-  }
-
-  .contact-icon {
-    position: fixed;
-    align-self: center;
-    margin: 3px 0px 0px 30px;
   }
 }
 
@@ -241,4 +166,11 @@
   align-items: center;
   font-size: 11px;
   color: #86BBD8;
+}
+
+@media only screen and (max-width: 420px) {
+  .reveal-text {
+    margin-top: 65px;
+    font-size: 14vw;
+  }
 }
