--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -82,9 +82,15 @@
 }
 /* ••·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
 
+.aboutme-wrap {
+  display: flex;
+  justify-content: center;
+}
+
 .aboutme {
-  width: 70%;
-  background-color: rgba(255, 255, 255, 0.548);
+  width: 50vw;
+  padding: 10px 20px 10px 20px;
+  background-color: rgba(255, 255, 255, 0.425);
   margin-bottom: 3%;
   color: white;
 }
@@ -100,7 +106,7 @@
 .welcome-div {
   height: 133px;
   width: 24vw;
-  background-color: rgba(192, 192, 192, 0.562);
+  background-color: rgba(255, 255, 255, 0.548);
   color: white;
   margin: 0px 2px 8px 2px;
   padding: 5px 9px 5px 11px;
@@ -146,10 +152,6 @@
   .welcome-div {
     width: 80vw;
   }
-}
-
-.space {
-  height: 25px;
 }
 
 .footer {
