--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -5,3 +5,9 @@
   background-color: rgba(255, 255, 255, 0.548);
   color: white;
 }
+
+@media only screen and (max-width: 420px) {
+  .contact-container {
+    margin-top: 50px;
+  }
+}
