Next step: Header

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -6,6 +6,23 @@
   color: white;
 }
 
+.email-phone-wrap {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.email-phone-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.github-linkedin-wrap {
+  display: flex;
+  justify-content: center;
+}
+
 @media only screen and (max-width: 420px) {
   .contact-container {
     margin-top: 50px;
